--- a/src/main/webapp/views/create.html
+++ b/src/main/webapp/views/create.html
@@ -9,24 +9,28 @@
     </a>
 </p>
 <div id="form">
-    <form action="Employee/save" th:object="${employee}"
+    <form action="#" th:action="@{/Employee/save}" th:object="${employee}"
           method="POST">
             <input type="text" readonly="true" th:field="*{empId}"/>
         <div>
             <label>Employee Name</label>
             <input type="text" th:field="*{empName}"/>
+            <p th:if="${#fields.hasErrors('empName')}" th:errors="*{empName}" style="color: red"></p>
         </div>
         <div>
             <label>Employee Adress</label>
-            <input type="email" th:field="*{address}"/>
+            <input type="text" th:field="*{address}"/>
+            <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" style="color: red"></p>
         </div>
         <div>
             <label>Employee Birthday</label>
             <input type="date" th:field="*{dob}"/>
+            <p th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}" style="color: red"></p>
         </div>
         <div>
             <label>Employee Phone</label>
             <input type="text" th:field="*{phone}"/>
+            <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" style="color: red"></p>
         </div>
         <input type="submit" value="Save"/>
     </form>
